[package]
name = "help-gov"
version = "0.1.0"
authors = ["Pratyaksh Gupta <pratyaksh1615@gmail.com>"]
edition = "2018"




exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.3
"""

[dependencies]
cw20 = { version = "0.8.0" } 
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
help-protocol = { version = "1.0.0", path = "./packages/help_protocol" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
hex = "0.4"

[dev-dependencies]
cosmwasm-schema = "0.16.0"